refactor: replace SQLite with PostgreSQL for metadata storage
Store project and database metadata directly in PostgreSQL (in pgmanager
schema) instead of a local SQLite file. This makes pgmanager stateless
and allows the same projects/databases to be managed from any machine
with access to the PostgreSQL server.

Changes:
- Add PostgreSQL metadata store (internal/meta/postgres.go)
- Add Store interface for pluggable backends (internal/meta/store.go)
- Add mock store for testing (internal/meta/mock.go)
- Remove SQLite store and tests
- Add config auto-discovery (pgmanager.yaml in current directory)
- Add 'pgmanager init' command to create config file
- Default SSL mode to 'disable' for local development
- Update CLAUDE.md with new architecture docs

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,6 @@
+# pgmanager configuration
+# Metadata is stored in the PostgreSQL server itself (in the pgmanager schema)
+
 # PostgreSQL connection
 # Override with: POSTGRES_HOST, POSTGRES_PORT, POSTGRES_USER, POSTGRES_PASSWORD, POSTGRES_DATABASE
 postgres:
@@ -6,17 +9,14 @@ postgres:
   user: postgres
   password: ""
   database: postgres
-
-# SQLite metadata storage
-# Override with: PGMANAGER_SQLITE_PATH
-sqlite:
-  path: ./data/pgmanager.db
+  ssl_mode: disable  # disable, require, verify-ca, verify-full
 
 # API server config
 # Override with: PGMANAGER_API_PORT, PGMANAGER_API_TOKEN
 api:
   port: 8080
   token: ""
+  require_token: true
 
 # Cleanup settings
 cleanup:
